apache-cookies-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-cookies-svc
  labels:
    app: apache-cookies
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 32000
    protocol: TCP
  selector:
    app: apache-cookies
